Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-2177237 | 7 | Vladimir Kozlov | P3 | Closed | Fixed | b36 |
JDK-2172769 | 6u14 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
Description
During my work on compressed oops I found this problem which is
also reported by one customer who also works with hotspot sources:
gamma -XX:CICompilerCount=8 -XX:+UseCompressedOops -XX:-CheckCompressedOops -Xss4m -Xverify:all -XX:-ShowMessageBoxOnError -XX:+CompileTheWorld -XX:CompileTheWorldStartAt=3962 -Xbootclasspath/p:/net/vmsqe.sfbay/export/backup/testbase/CompileTheWorld/jarfiles/weblogicbig.jar
CompileTheWorld (5243) : utils/dbping
CompileTheWorld (5244) : utils/dbserializec
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/reg_split.cpp:1221
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/net/jaberwocky/export/home2/work2/hg/6706829/src/share/vm/opto/reg_split.cpp:1221), pid=25949, tid=20
# Error: assert(def,"must have reaching def")
#
also reported by one customer who also works with hotspot sources:
gamma -XX:CICompilerCount=8 -XX:+UseCompressedOops -XX:-CheckCompressedOops -Xss4m -Xverify:all -XX:-ShowMessageBoxOnError -XX:+CompileTheWorld -XX:CompileTheWorldStartAt=3962 -Xbootclasspath/p:/net/vmsqe.sfbay/export/backup/testbase/CompileTheWorld/jarfiles/weblogicbig.jar
CompileTheWorld (5243) : utils/dbping
CompileTheWorld (5244) : utils/dbserializec
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/reg_split.cpp:1221
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/net/jaberwocky/export/home2/work2/hg/6706829/src/share/vm/opto/reg_split.cpp:1221), pid=25949, tid=20
# Error: assert(def,"must have reaching def")
#
Attachments
Issue Links
- backported by
-
JDK-2172769 Register Allocator does not process a data phi with one unique input correctly
- Resolved
-
JDK-2177237 Register Allocator does not process a data phi with one unique input correctly
- Closed
- relates to
-
JDK-6754146 1.5.0_15 C2 compiler crashes in PhaseChaitin::Split()
- Resolved