6746892: Register Allocator does not process a data phi with one unique input correctly

Always look for the existing phi for a processed live_range.

Reviewed-by: rasbold